added tests and modified structure of the project