@@ -8,3 +8,11 @@ libraryDependencies += "org.scalatest" %% "scalatest" % "3.2.19"
 libraryDependencies += "org.scalatestplus" %% "mockito-5-12" % "3.2.19.0"
 
 coverageEnabled := true
+
+Test / fork := true
+Test / javaOptions ++= Seq(
+  "-XX:+EnableDynamicAgentLoading"
+)
+Test / javaOptions ++= Seq(
+  "-Xshare:off"
+)
